--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#ff6b6b"/>
     <title>Restaurant Apps</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
+    <link rel="manifest" href="./app.webmanifest">
   </head>
   <body>
     <a href="#maincontent" class="skip-link">Menuju ke konten</a>
@@ -24,25 +27,8 @@
           </ul>
         </nav>
     </header>
-
-    <div class="hero">
-        <div class="hero-inner">
-          <h1 class="hero-title">Laper? Scroll Aja, KlikResto!</h1>
-          <p class="hero-tagline">
-            Dari yang murah sampai yang wah, semua tempat makan ada di sini!
-          </p>
-        </div>
-    </div>
-
     <main id="maincontent">
-        <section class="content">
-          <div class="explore-resto">
-            <h1 class="explore-resto-label">Explore Resto!</h1>
-          </div>
-          <div id="restoList" class="resto"></div>
-        </section>
     </main>
-
     <footer>
         <p>Copyright &copy; 2024 - KlikResto</p>
     </footer>
