--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -5,24 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#ff6b6b"/>
-    <title>Restaurant Apps</title>
+
+    <link rel="icon" href="../public/favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="manifest" href="./app.webmanifest">
+
+    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <title>Restaurant Apps</title>
   </head>
   <body>
     <a href="#maincontent" class="skip-link">Menuju ke konten</a>
     <header class="header">
         <nav class="app-bar">
           <div class="app-logo">
+            <img src="images/icons/icon-96x96.png" alt="Logo KlikResto">
             <h1 class="header-title">KlikResto</h1>
           </div>
-          <a href="#" id="menu" class="header-menu">☰</a>
+          <a href="" id="menu" class="header-menu">☰</a>
           <ul id="drawer" class="nav">
             <li class="nav-item"><a href="#">Home</a></li>
-            <li class="nav-item"><a href="#">Favorite</a></li>
+            <li class="nav-item"><a href="#/favorite">Favorite</a></li>
             <li class="nav-item"><a href="https://www.instagram.com/shandyariadyp/">About Us</a></li>
           </ul>
         </nav>
