--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -13,7 +13,7 @@
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="manifest" href="./app.webmanifest">
 
-    <script src="https://use.fontawesome.com/b070c8f1df.js"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
     <title>Restaurant Apps</title>
   </head>
   <body>
@@ -32,7 +32,7 @@
           </ul>
         </nav>
     </header>
-    <main id="maincontent">
+    <main id="maincontent" tabindex="-1">
     </main>
     <footer>
         <p>Copyright &copy; 2024 - KlikResto</p>
