--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -12,9 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="manifest" href="./app.webmanifest">
-
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" crossorigin="anonymous">
+    
     <title>Restaurant Apps</title>
+    <meta name="description" content="Aplikasi restoran terbaik yang menyediakan informasi restoran, menu, lokasi, dan rating. Temukan restoran favorit Anda dengan mudah!">
   </head>
   <body>
     <a href="#maincontent" class="skip-link">Menuju ke konten</a>
@@ -33,6 +34,7 @@
         </nav>
     </header>
     <main id="maincontent" tabindex="-1">
+      <loading-spinner></loading-spinner>
     </main>
     <footer>
         <p>Copyright &copy; 2024 - KlikResto</p>
